--- a/bat/ann.html
+++ b/bat/ann.html
@@ -267,7 +267,9 @@
                             <small class="lg-date">14 Oct 2025</small>
                         </div>
                     </div>
-                    <p class="mb-1">PTC grants overall fare adjustment of 5.0%...</p>
+                    <p class="mb-1" style="cursor: pointer;">
+                        PTC grants overall fare adjustment of 5.0% - below the maximum allowable quantum of 14.4%;
+                        deferment of remaining quantum (9.4%) supported by additional Government subsidies...</p>
                 </a>
                 <a href="https://landtransportguru.net/ecid-ewl-closure-nov25/"
                     class="list-group-item list-group-item-action flex-column align-items-start">
@@ -277,9 +279,23 @@
                             <small class="lg-date">03 Oct 2025</small>
                         </div>
                     </div>
-                    <p class="mb-1">No Train Service will be available on the East-West Line...</p>
+                    <p class="mb-1">No Train Service will be available on the East-West Line (EWL) between Bedok –
+                        Tampines & Tanah Merah – Expo from Saturday, 29 November 2025 to Monday, 8 December 2025.</p>
+                </a>
+                <a href="https://landtransportguru.net/shortened-ops-hours-ccl-sep-dec-2025/"
+                    class="list-group-item list-group-item-action flex-column align-items-start">
+                    <div class="d-flex">
+                        <div>
+                            <h5 class="lg-ann">Service Adjustments - CCL</h5>
+                            <small class="lg-date">12 Aug 2025</small>
+                        </div>
+                    </div>
+                    <p class="mb-1">Early Closures & Late Openings (ECLO) along the entire Circle Line (CCL), between
+                        Dhoby Ghaut / Marina Bay and HarbourFront, will take place across 14 Fridays, Saturdays &
+                        Sundays between 5 September 2025 and 28 December 2025.</p>
                 </a>
             </div>
+
         </div>
     </section>
 
