--- a/bat/ann.html
+++ b/bat/ann.html
@@ -256,7 +256,7 @@
     <section class="about-me-summ clearfix" style="padding-bottom: 5em;">
         <div class="container">
             <div class="alert alert-warning" role="alert" id="train-alert">
-                Loading train service alerts...
+                <i class="fa-solid fa-bullhorn"></i> Loading train service alerts...
             </div>
             <div class="list-group">
                 <a href="https://www.ptc.gov.sg/newsroom/news-releases/newsroom-view/fare-review-exercise-2025"
@@ -348,34 +348,32 @@
 
     <script src="../js/utils.js"></script>
 
-    <script>
-        // Fetch train service alerts and update the alert box
-        async function fetchTrainServiceAlerts() {
-            const alertBox = document.getElementById('train-alert');
-            try {
-                const response = await fetch('https://bat-lta-9eb7bbf231a2.herokuapp.com/train-service-alerts');
-                if (!response.ok) {
-                    throw new Error('Failed to fetch train service alerts');
-                }
-                const data = await response.json();
-
-                // Check if there are any active alerts
-                if (data && data.value && data.value.length > 0) {
-                    const alerts = data.value.map(alert => alert.Message).join('<br>');
-                    alertBox.innerHTML = alerts;
-                } else {
-                    alertBox.innerHTML = 'No active train service alerts.';
-                }
-            } catch (error) {
-                console.error('Error fetching train service alerts:', error);
-                alertBox.innerHTML = 'Unable to load train service alerts.';
+<script>
+    // Fetch train service alerts and update the alert box
+    async function fetchTrainServiceAlerts() {
+        const alertBox = document.getElementById('train-alert');
+        try {
+            const response = await fetch('https://bat-lta-9eb7bbf231a2.herokuapp.com/train-service-alerts');
+            if (!response.ok) {
+                throw new Error(`Failed to fetch train service alerts: ${response.statusText}`);
             }
+            const data = await response.json();
+
+            // Check if there is a valid alert message
+            if (data && data.value && data.value.Message && Array.isArray(data.value.Message) && data.value.Message.length > 0) {
+                const alerts = data.value.Message.map(msg => msg.Content || 'No content available').join('<br>');
+                alertBox.innerHTML = `<i class="fa-solid fa-bullhorn"></i> ${alerts}`;
+            } else {
+                alertBox.innerHTML = `<i class="fa-solid fa-bullhorn"></i> No active train service alerts.`;
+            }
+        } catch (error) {
+            alertBox.innerHTML = `<i class="fa-solid fa-bullhorn"></i> Unable to load train service alerts.`;
         }
+    }
 
-        // Call the function to fetch train service alerts
-        fetchTrainServiceAlerts();
-    </script>
-
+    // Call the function to fetch train service alerts
+    fetchTrainServiceAlerts();
+</script>
 </body>
 
 </html>
