--- a/buszy.html
+++ b/buszy.html
@@ -244,7 +244,7 @@
                     <a href="bat/ann.html" class="btn bz-btn btn-2 mt-15"><i class="fa-solid fa-arrow-right"></i></a>
                 </div>
                 <div class="card-bz card-ann">
-                    <img src="bat/assets/ann.png" alt="ann" class="card-icon" />
+                    <img src="bat/assets/settings.png" alt="settings" class="card-icon" />
                     <p>Settings</p>
                     <a href="bat/settings.html" class="btn bz-btn btn-2 mt-15"><i class="fa-solid fa-arrow-right"></i></a>
                 </div>
