2025-12 Cumulative Update for Version 2512 (6.1.0)

--- a/bat/abs.html
+++ b/bat/abs.html
@@ -499,7 +499,8 @@
 
         // Refresh the active tab when the back button is pressed
         window.addEventListener('popstate', () => {
-            location.reload();
+            // Force a full page reload by appending a unique query string
+            location.href = location.href.split('?')[0] + '?reload=' + new Date().getTime();
         });
     </script>
 
