2025-12 Cumulative Update for Version 2512 (6.1.0)

--- a/buszy.html
+++ b/buszy.html
@@ -288,8 +288,8 @@
         </div>
     </footer>
 
-    <script type="text/javascript" id="cookiebanner" src="js/cookies-banner.js" data-position="bottom"
-        data-bg="#f2f3e5" data-fg="#000" data-font-family="Onest, sans-serif" data-zindex="12345111111"
+    <script type="text/javascript" id="cookiebanner" src="js/cookies-banner.js" data-position="bottom" data-bg="#f2f3e5"
+        data-fg="#000" data-font-family="Onest, sans-serif" data-zindex="12345111111"
         data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
         </script>
 
@@ -392,16 +392,13 @@
             allappsElement.textContent = getGreeting();
         });
 
-// Update the browser history state when navigating tabs
-history.replaceState({ tab: 'activeTab' }, '', location.href);
-
-// Handle the back button
-window.addEventListener('popstate', (event) => {
-    if (event.state && event.state.tab) {
-        console.log(`Navigated to tab: ${event.state.tab}`);
-        location.reload(); // Reload the page or handle the tab change
-    }
-});    </script>
+        // Handle the back button
+        window.addEventListener('popstate', (event) => {
+            if (event.state && event.state.tab) {
+                location.reload(); // Reload the page or handle the tab change
+            }
+        });
+    </script>
 
 </body>
 
