--- a/bat/ann.html
+++ b/bat/ann.html
@@ -383,12 +383,13 @@
         // Call the function to fetch train service alerts
         fetchTrainServiceAlerts();
 
-        // Handle the back button
-        window.addEventListener('popstate', (event) => {
-            if (event.state && event.state.tab) {
-                location.reload(); // Reload the page or handle the tab change
-            }
-        });
+// Auto-reload the scrollbar tabs after 2 seconds
+setTimeout(() => {
+    const scrollableTabsContainer = document.querySelector('.scrollable-tabs-container');
+    if (scrollableTabsContainer) {
+        scrollableTabsContainer.innerHTML = scrollableTabsContainer.innerHTML; // Re-render the tabs
+    }
+}, 2000);
     </script>
 </body>
 
