--- a/bat/nbs.html
+++ b/bat/nbs.html
@@ -453,15 +453,14 @@
             }
         });
 
-        // Update the browser history state when navigating tabs
-        history.replaceState({ tab: 'activeTab' }, '', location.href);
 
-        // Handle the back button
-        window.addEventListener('popstate', (event) => {
-            if (event.state && event.state.tab) {
-                location.reload(); // Reload the page or handle the tab change
+        // Auto-reload the scrollbar tabs after 2 seconds
+        setTimeout(() => {
+            const scrollableTabsContainer = document.querySelector('.scrollable-tabs-container');
+            if (scrollableTabsContainer) {
+                scrollableTabsContainer.innerHTML = scrollableTabsContainer.innerHTML; // Re-render the tabs
             }
-        });
+        }, 2000);
     </script>
 </body>
 
