--- a/bat/ann.html
+++ b/bat/ann.html
@@ -383,8 +383,8 @@
         // Call the function to fetch train service alerts
         fetchTrainServiceAlerts();
 
-// Auto-reload the scrollbar tabs after 2 seconds
-setTimeout(() => {
+// Auto-reload the scrollbar tabs every 2 seconds
+setInterval(() => {
     const scrollableTabsContainer = document.querySelector('.scrollable-tabs-container');
     if (scrollableTabsContainer) {
         scrollableTabsContainer.innerHTML = scrollableTabsContainer.innerHTML; // Re-render the tabs
