--- a/bat/settings.html
+++ b/bat/settings.html
@@ -419,13 +419,25 @@
             });
         });
 
-// Auto-reload only the active tab every 2 seconds
-setInterval(() => {
-    const activeTab = document.querySelector('.scrollable-tabs-container .active');
-    if (activeTab) {
-        activeTab.innerHTML = activeTab.innerHTML; // Re-render the active tab
-    }
-}, 2000);
+    document.addEventListener('DOMContentLoaded', () => {
+        // Get all navigation links
+        const navLinks = document.querySelectorAll('.nav-link, .mobile-menu-link');
+
+        // Get the current page URL
+        const currentPage = window.location.pathname;
+
+        // Remove 'active' class from all links
+        navLinks.forEach(link => {
+            link.classList.remove('active');
+        });
+
+        // Add 'active' class to the link that matches the current page
+        navLinks.forEach(link => {
+            if (link.getAttribute('href') && currentPage.endsWith(link.getAttribute('href'))) {
+                link.classList.add('active');
+            }
+        });
+    });
     </script>
 </body>
 
