2025-12 Cumulative Update for Version 2512 (6.1.0)

--- a/buszy.html
+++ b/buszy.html
@@ -387,6 +387,9 @@
                     return 'Good Evening!';
                 }
             }
+
+            // Update the <h2> element with the all-apps
+            allappsElement.textContent = getGreeting();
         });
         
     </script>
