2025-12 Cumulative Update for Version 2512 (6.1.0)

--- a/bat/ann.html
+++ b/bat/ann.html
@@ -330,7 +330,7 @@
 
     <script src="../js/navtabs.js"></script>
 
-    <script src="buszy.js"></script>
+    <script src="buszy-subp.js"></script>
 
     <script src="../js/jquery.min.js"></script>
 
