2025-12 Cumulative Update for Version 2512 (6.1.0)

--- a/worksbynrfz/buszy.html
+++ b/worksbynrfz/buszy.html
@@ -8,7 +8,7 @@
   <meta name="google-site-verification" content="57TuruPNu5wqSSia_cUehl5t9Gh1AbxrHNPcMiFx-aQ" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Bus Arrival Timings | WBN</title>
+  <title>Buszy - Bus Arrival Timings | WBN</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
   <meta property="og:image" content="https://i.imgur.com/i8n9KYs.png" />
@@ -38,7 +38,7 @@
 
 <style>
   #cv-tdc {
-    background-image: url('https://i.imgur.com/ffwxhba.png');
+    background-image: url('https://i.imgur.com/9tt1J7l.png');
     height: 75vh;
   }
 </style>
@@ -206,8 +206,8 @@
 
           <ul>
             <li>
-              <a href="https://nurafianzulkifli.github.io/train-delays-checker/"><i
-                  class="fa-solid fa-arrow-up-right-from-square"></i>&nbsp; View Website</a>
+              <a href="https://nurafianzulkifli.com/buszy"><i class="fa-solid fa-arrow-up-right-from-square"></i>&nbsp;
+                View Website</a>
             </li>
           </ul>
 
@@ -265,10 +265,10 @@
                     </div>
                     <h3 style="font-size: 18px; font-weight: bolder;">Share Project</h3>
                     <div class="social_links">
-                      <a href="https://www.facebook.com/sharer/sharer.php?u=https://nurafianzulkifli.com/worksbynrfz/delays-checker.html"
+                      <a href="https://www.facebook.com/sharer/sharer.php?u=https://nurafianzulkifli.com/worksbynrfz/buszy.html"
                         title="Facebook">
                         <i class="fa-brands fa-facebook"></i> </a>
-                      <a href="https://x.com/intent/post?url=https://nurafianzulkifli.com/worksbynrfz/delays-checker.html&text= Train Delays Checker"
+                      <a href="https://x.com/intent/post?url=https://nurafianzulkifli.com/worksbynrfz/buszy.html&text= Buszy - Bus Arrival Timings"
                         title="X (Twitter)">
                         <i class="fa-brands fa-x-twitter"></i></a>
                       <a href="#" class="clipboard" onclick="copyToClipboard(this)" title="Copy Link">
@@ -285,7 +285,8 @@
             <div class="row justify-content-center">
               <div class="col-lg-12">
                 <div class="info justify-content-center">
-                  <p style="text-align: justify;">A passion project. Started off from vibe-coding, it has slowly transformed into a fully functional Bus Arrival Web App.</p>
+                  <p style="text-align: justify;">A passion project. Started off from vibe-coding, it has slowly
+                    transformed into a fully functional Bus Arrival Web App.</p>
                 </div>
               </div>
             </div>
@@ -300,18 +301,18 @@
   <div class="wrapper">
     <div class="carousel" id="delays-carousel">
       <div class="carousel-cell">
-        <a href="https://i.imgur.com/hmYKkAS.png" class="portfolio-img" data-gallery="carousel" id="tdt1">
-          <img class="img-fluid" src="https://i.imgur.com/hmYKkAS.png" alt="tdt1-img" draggable="false" id="tdt1-img">
+        <a href="https://i.imgur.com/8A4KosG.png" class="portfolio-img" data-gallery="carousel" id="bsz1">
+          <img class="img-fluid" src="https://i.imgur.com/8A4KosG.png" alt="bsz1-img" draggable="false" id="bsz1-img">
         </a>
       </div>
       <div class="carousel-cell">
-        <a href="https://i.imgur.com/HVLfvR0.png" class="portfolio-img" data-gallery="carousel" id="tdt2">
-          <img class="img-fluid" src="https://i.imgur.com/HVLfvR0.png" alt="tdt2-img" draggable="false" id="tdt2-img">
+        <a href="https://i.imgur.com/9NpbvWN.png" class="portfolio-img" data-gallery="carousel" id="bsz2">
+          <img class="img-fluid" src="https://i.imgur.com/9NpbvWN.png" alt="bsz2-img" draggable="false" id="bsz2-img">
         </a>
       </div>
       <div class="carousel-cell">
-        <a href="https://i.imgur.com/8pfBM4C.png" class="portfolio-img" data-gallery="carousel" id="tdt3">
-          <img class="img-fluid" src="https://i.imgur.com/8pfBM4C.png" alt="tdt3-img" draggable="false" id="tdt3-img">
+        <a href="https://i.imgur.com/FQgAbIh.png" class="portfolio-img" data-gallery="carousel" id="bsz3">
+          <img class="img-fluid" src="https://i.imgur.com/FQgAbIh.png" alt="bsz3-img" draggable="false" id="bsz3-img">
         </a>
       </div>
     </div>
@@ -453,42 +454,42 @@
 
       const isDarkMode = document.body.classList.contains('dark-mode');
 
-      const tdt1_link = document.getElementById('tdt1');
-      const tdt1_img = document.getElementById('tdt1-img');
+      const bsz1_link = document.getElementById('bsz1');
+      const bsz1_img = document.getElementById('bsz1-img');
 
-      const tdt2_link = document.getElementById('tdt2');
-      const tdt2_img = document.getElementById('tdt2-img');
+      const bsz2_link = document.getElementById('bsz2');
+      const bsz2_img = document.getElementById('bsz2-img');
 
-      const tdt3_link = document.getElementById('tdt3');
-      const tdt3_img = document.getElementById('tdt3-img');
+      const bsz3_link = document.getElementById('bsz3');
+      const bsz3_img = document.getElementById('bsz3-img');
 
 
       if (isDarkMode) {
         /* Banners */
-        tdcPage.style.backgroundImage = "url('https://i.imgur.com/ffwxhba.png')";
+        tdcPage.style.backgroundImage = "url('https://i.imgur.com/9tt1J7l.png')";
 
-        tdt1_link.href = 'https://i.imgur.com/X8jzLkz.png';
-        tdt1_img.src = 'https://i.imgur.com/X8jzLkz.png';
+        bsz1_link.href = 'https://i.imgur.com/BaEaY58.png';
+        bsz1_img.src = 'https://i.imgur.com/BaEaY58.png';
 
-        tdt2_link.href = 'https://i.imgur.com/wB1HaLg.png';
-        tdt2_img.src = 'https://i.imgur.com/wB1HaLg.png';
+        bsz2_link.href = 'https://i.imgur.com/JV8jzsN.png';
+        bsz2_img.src = 'https://i.imgur.com/JV8jzsN.png';
 
-        tdt3_link.href = 'https://i.imgur.com/ypd3eta.png';
-        tdt3_img.src = 'https://i.imgur.com/ypd3eta.png';
+        bsz3_link.href = 'https://i.imgur.com/TajBbwn.png';
+        bsz3_img.src = 'https://i.imgur.com/TajBbwn.png';
 
 
       } else {
         /* Banners */
-        tdcPage.style.backgroundImage = "url('https://i.imgur.com/ffwxhba.png')";
+        tdcPage.style.backgroundImage = "url('https://i.imgur.com/9tt1J7l.png')";
 
-        tdt1_link.href = 'https://i.imgur.com/hmYKkAS.png';
-        tdt1_img.src = 'https://i.imgur.com/hmYKkAS.png';
+        bsz1_link.href = 'https://i.imgur.com/8A4KosG.png';
+        bsz1_img.src = 'https://i.imgur.com/8A4KosG.png';
 
-        tdt2_link.href = 'https://i.imgur.com/HVLfvR0.png';
-        tdt2_img.src = 'https://i.imgur.com/HVLfvR0.png';
+        bsz2_link.href = 'https://i.imgur.com/9NpbvWN.png';
+        bsz2_img.src = 'https://i.imgur.com/9NpbvWN.png';
 
-        tdt3_link.href = 'https://i.imgur.com/8pfBM4C.png';
-        tdt3_img.src = 'https://i.imgur.com/8pfBM4C.png';
+        bsz3_link.href = 'https://i.imgur.com/92W7KRL.png';
+        bsz3_img.src = 'https://i.imgur.com/92W7KRL.png';
 
       }
     }
