--- a/works-by-nrfz.html
+++ b/works-by-nrfz.html
@@ -276,16 +276,16 @@
 
 
           <div class="row pw-portfolio">
-            <!-- <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 " data-year="2025">
+            <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 " data-year="2025">
               <div class="single-portfolio-content">
-                <img src="https://i.imgur.com/kSHiKjW.png" alt>
+                <img src="https://i.imgur.com/9zxAL3F.png" alt>
                 <div class="hover-content-blog align-items-center">
-                  <h4>Bus Arrival Timings</h4>
-                  <a class="info" href="worksbynrfz/bus-arr.html" class="portfolio-img"><i
+                  <h4>Buszy - Bus Arrival Timings</h4>
+                  <a class="info" href="worksbynrfz/buszy.html" class="portfolio-img"><i
                       class="fa-solid fa-arrow-right"></i></a>
                 </div>
               </div>
-            </div> -->
+            </div>
 
             <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 " data-year="2025">
               <div class="single-portfolio-content">
