--- a/bat/art.html
+++ b/bat/art.html
@@ -425,7 +425,7 @@
                 tableBody.innerHTML = '';
 
                 if (!data.Services || data.Services.length === 0) {
-                    tableBody.innerHTML = '<tr><td colspan="3">No data available</td></tr>';
+                    tableBody.innerHTML = '<tr><td colspan="3"><p style = "text-align:center; display: flex; align-items: center; justify-content: center; gap: 10px;" No Data Avaliable</td></tr>';
                     return;
                 }
 
